Expanded Cheat Menu:
- Code cleanup.

### Added:
- ECM>Grid Info: List objects in grids (air, electricity, and water).

### Changed:
- Examine:
- > Added tooltips to "hyperlinks".

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -251,6 +251,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001079,<left_click> Default Action <right_click> Examine,
 302535920001522,Hex Shape Toggle,
 302535920001523,Toggle showing shapes for the object.,
 302535920001521,Lua source file not found.,
@@ -1153,6 +1154,9 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000550,Make it instantly gather/transfer resources.,
 302535920000551,RC Storage Capacity,
 302535920000552,Change amount of resources RC Transports/Constructors can carry.,
+302535920001307,Grid Info,
+302535920001477,"List objects in grids (air, electricity, and water).",
+302535920000142,Hide,
 302535920000081,Workers,
 302535920000333,Building Info,
 302535920000345,Shows info about building in text above it.,
