Expanded Cheat Menu: - Removed some ValidateImage log spam.
### Added:
- Debug>Building Path Markers: Show inside waypoints colonists take to move around.

### Changed:
- Examine:
- > Added Object>Entity Surfaces: Shows list of surfaces for the object entity.
- > Removes any placed bbox, hex shapes, and spot names when the dialog is closed.

Research Filter v0.1:
Add a text box to filter tech in the research screen (filter uses name, description, and id).
Press Shift+Enter to clear filter (or Backspace a bunch).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -251,6 +251,9 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001524,Entity Surfaces,
+302535920001525,Shows list of surfaces for the object entity.,
+302535920001526,Not a valid object,
 302535920001079,<left_click> Default Action <right_click> Examine,
 302535920001522,Hex Shape Toggle,
 302535920001523,Toggle showing shapes for the object.,
@@ -939,6 +942,8 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001527,Building Path Markers,
+302535920001528,Show inside waypoints colonists take to move around (not all buildings).,
 302535920001498,Examine Persist Errors,
 302535920001499,Shows an examine dialog with any persist errors when saving (needs ECM HelperMod).,
 302535920001491,View All Entities,
