Lib: - Added a text search area to the MultiLineText dialog.
ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -215,6 +215,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001305,Find Within,
 302535920001306,Enter text to find,
 302535920001304,Set how many levels within this table we check into (careful making it too large).,
+302535920001529,"Press <color 0 200 0>Enter</color> to select next found text, and <color 0 200 0>Ctrl-Enter</color> to scroll to previous found text.",
 302535920001474,Code Highlight,
 302535920001475,Toggle lua code highlighting.,
 302535920001423,Close without doing anything.,
@@ -251,6 +252,7 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001530,Various object tools to use.,
 302535920001524,Entity Surfaces,
 302535920001525,Shows list of surfaces for the object entity.,
 302535920001526,Not a valid object,
@@ -320,10 +322,10 @@ You can access a default value with obj:GetDefaultPropertyValue(""NAME"")
 302535920000414,Are you sure you wish to delete it?,
 302535920000239,Tools,
 302535920000228,Assign to,
-302535920000043,"Press Enter to scroll to next found text, Ctrl-Enter to scroll to previous found text, Arrows to scroll to each end.",
+302535920000043,"Press <color 0 200 0>Enter</color> to scroll to next found text, <color 0 200 0>Ctrl-Enter</color> to scroll to previous found text, <color 0 200 0>Arrow Keys</color> to scroll to each end.",
 302535920000044,Go To Text,
 302535920000045,"Scrolls down one line or scrolls between text in ""Go to text"".
-Right-click to go up, middle-click to scroll to the top.",
+Right-click <right_click> to go up, middle-click <middle_click> to scroll to the top.",
 302535920000046,dumps text to %slogs\DumpedExamine.lua,
 302535920000047,"View text, and optionally dumps text to %slogs\DumpedExamine.lua (don't use this option on large text).",
 302535920000048,View,
