Expanded Cheat Menu:
### Added:
- Infopanel Cheats>ToggleConstruct: Make a building model look like a construction site (toggle).

### Changed:
- Examine:
- > Changed some of the "Flags" list to be toggleable.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,4 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
+302535920001531,Make the building model look like a construction site.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
