Expanded Cheat Menu:
- Fixed building info.
- Added Fixes>Remove Invalid Label Objects.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1163,6 +1163,7 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000550,Make it instantly gather/transfer resources.,
 302535920000551,RC Storage Capacity,
 302535920000552,Change amount of resources RC Transports/Constructors can carry.,
+302535920001532,Battery,
 302535920001307,Grid Info,
 302535920001477,"List objects in grids (air, electricity, and water).",
 302535920000142,Hide,
@@ -1247,6 +1248,8 @@ Mechanized: 1,000,000",
 302535920000578,Change waste storage depot capacity.,
 302535920000579,Storage Mechanized Depots,
 302535920000580,Change mechanized depot storage capacity.,
+302535920001533,Remove Invalid Label Objects,
+302535920001534,Checks the city.labels for invalid objects and removes them from the label.,
 302535920001483,Missing Mod Buildings,
 302535920001484,"Removes any placed buildings that were from a mod.
 This may break the save in other ways, best to just use it for testing.",
