Expanded Cheat Menu:
### Changed:
- Examine:
- > Added context menu to table items.

### Fixed:
- Buildings>Sanatoriums & Schools>Show All Traits wasn't toggling back to the default list.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,4 +1,7 @@
 ID,Text,Translation,Old Translation,Gender
+302535920001535,Set Value,
+302535920001539,Change the value of %s.,
+302535920001540,Show context menu for %s.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -253,6 +256,9 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001536,"Remove the ""%s"" key from %s.",
+302535920001537,Close Menu,
+302535920001538,Close this menu.,
 302535920001530,Various object tools to use.,
 302535920001524,Entity Surfaces,
 302535920001525,Shows list of surfaces for the object entity.,
