Expanded Cheat Menu: - Missed a few strings. Mods: - Updated mods that used the old translate method.
ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Personal Shuttles/changes.txt
+++ b/Mods ChoGGi/Personal Shuttles/changes.txt
@@ -1,3 +1,6 @@
+v0.9
+Update to my lib mod.
+
 v0.8
 Pick up button wasn't showing on objects unless two shuttles were spawned.
 Added pick up option to waste rock.
