Expanded Cheat Menu:
- Cleaned up examine code a tad.
Mods:
- Changed local funcs in Solar Array Follows Sun.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,4 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001535,Set Value,
-302535920001539,Change the value of %s.,
-302535920001540,Show context menu for %s.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -256,6 +253,9 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001535,Set Value,
+302535920001539,Change the value of %s.,
+302535920001540,Show context menu for %s.,
 302535920001536,"Remove the ""%s"" key from %s.",
 302535920001537,Close Menu,
 302535920001538,Close this menu.,
@@ -1520,8 +1520,7 @@ Move ModContent.hpk to Mod folder/Pack/ModContent.hpk",
 302535920001509,Platform,
 302535920001510,Paradox mods platform: Leave checked to upload to Desktop only or uncheck to upload to Desktop and Console.,
 302535920001506,Steam,
-302535920001507,"Uncheck to upload to Paradox mods (instead of Steam).
-Mod will always be packed in hpk archive.",
+302535920001507,Uncheck to upload to Paradox mods (instead of Steam).,
 302535920001485,Does everything other than uploading mod to workshop (see AppData/ModUpload).,
 302535920001481,Show Startup Ticks,
 302535920001482,Prints to console how many ticks it takes the map to load.,
