Expanded Cheat Menu:
- Examine: Fixed sorting for context menu items, as well as added all types.

Lib:
- Added func names to RetName func.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Remove Unwanted Colonists/todo.txt
+++ b/Mods ChoGGi/Remove Unwanted Colonists/todo.txt
@@ -1,1 +1,4 @@
 filter to auto remove traits
+
+some Lazy colonists just don't go outside
+LukeH: outside monuments => service buildings that canService only idiots
