--- a/Mods ChoGGi/Golden Storage/changes.txt
+++ b/Mods ChoGGi/Golden Storage/changes.txt
@@ -1,4 +1,8 @@
+v0.4
+Hopefully stopped shuttles from coming over and getting stuck mid-air.
+
 v0.3
 Da Vinci
+
 v0.2
 Uses the smallest resource platform model now.
