--- a/Mods ChoGGi/Mars Companion/todo.txt
+++ b/Mods ChoGGi/Mars Companion/todo.txt
@@ -4,6 +4,7 @@ use parabol func to make smooth turns
 
 maybe check out nearby buildings and rocks, some beeping noises or such?
 snuggles up to the camera and beeps at you?
+checks out the cursor if you've left it hovering over a building
 
 throws rocks around if camera stays in same place for awhile
 randomly picks up drones and "plays"? with them
