Expanded Cheat Menu: - Updated Mod Extract/Upload to be more aware of pops mods.
Mods:
Converted some more string.format to .. .

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1520,7 +1520,7 @@ https://github.com/nickelc/hpk
 hpk create ""Mod folder"" ModContent.hpk
 Move ModContent.hpk to Mod folder/Pack/ModContent.hpk",
 302535920001509,Platform,
-302535920001510,Paradox mods platform: Leave <color 0 200 0>checked</color> to upload to Desktop only or <color 0 200 0>uncheck</color> to upload to Desktop and Console.,
+302535920001510,Paradox mods platform: Leave <color 0 255 0>checked</color> to upload to Desktop only or <color 0 255 0>uncheck</color> to upload to Desktop and Console.,
 302535920001506,Steam,
 302535920001507,Uncheck to upload to Paradox mods (instead of Steam).,
 302535920001485,Does everything other than uploading mod to workshop (see AppData/ModUpload).,
@@ -1544,7 +1544,7 @@ This will always apply if uploading to paradox.",
 302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
 302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
 302535920001362,Extract HPKs,
-302535920001363,Shows list of Steam downloaded mod hpk files for extraction (or use hpk.exe).,
+302535920001363,Shows list of Steam/Paradox downloaded mod hpk files for extraction (or use hpk.exe).,
 302535920000504,List All Menu Items,
 302535920001323,Show all the cheat menu items in a list dialog.,
 302535920001285,Opens in webbrowser.,
