Expanded Cheat Menu:
### Changed:
- Mission>Set Disaster Occurrence: Adds the setting values to the tooltip.
- Examine:
- > Attaches menu shows what object the attachment is attached to.
- > Objects with paths now shows a bit more info and a link to the (cleaned up) paths.
- > Made View Source button a clickable link
- > Rearranged function info.
- > Shows "params: ()" instead of zilch for funcs with no params.
- > Now also hides any spheres added when closing (like with bbox/shapes).

Lib:
- RetName was returning "*C func" for non-C funcs.
- Code cleanup / Moved some ECM only funcs to ECM.

Colonists Use Shuttles For Work v0.1:
Colonists can use shuttles to get to work.
Not tested extensively, but seems to work fine.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -256,6 +256,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001545,Going to %s,
+302535920001544,Attached to: %s,
 302535920001535,Set Value,
 302535920001539,Change the value of %s.,
 302535920001540,Show context menu for %s.,
@@ -272,11 +274,10 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001521,Lua source file not found.,
 302535920001519,View Source,
 302535920001520,"Opens source code in text viewer (if it exists):
-Mods work fine, as well as HG github code. HG code needs to be placed at: ""%sSource""
+Mod code works fine, as well as HG github code. HG code needs to be placed at: ""%sSource""
 Example: ""Source/Lua/_const.lua""
 
-Decompiled code won't scroll correctly as the line numbers are different.
-Needs HelperMod enabled.",
+Decompiled code won't scroll correctly as the line numbers are different.",
 302535920000264,Defaults to :GetObjectBBox() if it can't find a func.,
 302535920001514,Toggle visibility of an input box for executing code.,
 302535920001515,Press enter to execute code.,
