Expanded Cheat Menu:
### Added:
- Debug>List Visible Objects: Shows list of objects rendered in the current frame.

### Changed:
- Examine:
- > Added Surfaces Toggle: Show a list of surfaces and draw lines over them (GetRelativeSurfaces).
- > Valid objects now show a bit more info and a link to the (cleaned up) paths.
- > Now also hides any spheres/surface lines/spots added when closing (like with bbox/shapes).
- > Objects menu is hidden for non-valid objects (some menuitems moved to Tools).
- > Object>"Toggle" items now have a depth test checkbox.
- > Object>Toggle Attach Spots is now a list that can be filtered with spot names (also a line for chains).
- > Box objects with a valid position (1000 pt from border) now have a View BBox toggle.

Lib:
- List Dialog:
- > Show Custom Value is now hidden by default behind the checkbox (also scrolls to the "item").
- > custom_type 7/8 now return the checkbox states.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -256,6 +256,12 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001551,Surfaces Toggle,
+302535920001552,Show a list of surfaces and draw lines over them (GetRelativeSurfaces).,
+302535920001553,Depth Test,
+302535920001554,If enabled lines will hide behind occluding walls (not glass).,
+302535920001549,View BBox,
+302535920001550,Toggle viewing BBox.,
 302535920001545,Going to %s,
 302535920001544,Attached to: %s,
 302535920001535,Set Value,
@@ -385,7 +391,7 @@ The listitem <color 0 200 0>must</color> be selected for this to take effect (it
 It won't be visible unless the ""%s"" checkbox is enabled.
 
 Warning: Entering the wrong value may crash the game or otherwise cause issues.",
-302535920000078,Type Custom Value,
+302535920000078,Custom Value,
 302535920000079,* Use this custom value,
 302535920000080,"Press OK to apply and close dialog (Arrow keys and Enter/Esc can also be used, and probably double left-clicking <left_click>).",
 302535920000082,"Check this for ""All of type"" to only apply to connected grid.",
@@ -956,6 +962,8 @@ Works after colonist idle.",
 Not permanent.",
 302535920000447,Change the age at which colonists die (applies to newly arrived and born colonists as well).,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001547,List Visible Objects,
+302535920001548,Shows list of objects rendered in the current frame.,
 302535920001527,Building Path Markers,
 302535920001528,Show inside waypoints colonists take to move around (not all buildings).,
 302535920001498,Examine Persist Errors,
