Expanded Cheat Menu:
### Changed:
- Moved Cheats>Workplaces to ECM>Colonists>Workplaces.
- Sped up Toggle Flight Grid so it's nice n smooth.

### Fixed:
- Borken menuitems (if you find one that doesn't do anything let me know... log helps).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -2,6 +2,9 @@ ID,Text,Translation,Old Translation,Gender
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
+302535920000201,Active,
+302535920000089,Nothing left,
+302535920001526,Not a valid object,
 302535920000547,Lock,
 302535920000318,Unlock,
 302535920001486,DTM Slots,
@@ -78,7 +81,6 @@ ID,Text,Translation,Old Translation,Gender
 302535920001541,Start a Crime Event,
 302535920001542,Renegades not required.,
 302535920001518,Double-click <left_click> title to rollup into the title bar.,
-302535920000201,Active,
 302535920000001,"F2 to toggle Cheats Menu (Ctrl-F2 for Cheats Pane), and F9 to clear console log text.
 If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""To import your old settings"".",
 302535920001411,ECM has been disabled. Change DisableECM to false in settings file.,
@@ -273,7 +275,6 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001530,Various object tools to use.,
 302535920001524,Entity Surfaces,
 302535920001525,Shows list of surfaces for the object entity.,
-302535920001526,Not a valid object,
 302535920001079,<left_click> Default Action <right_click> Examine,
 302535920001522,Hex Shape Toggle,
 302535920001523,Toggle showing shapes for the object.,
@@ -284,7 +285,7 @@ Mod code works fine, as well as HG github code. HG code needs to be placed at: "
 Example: ""Source/Lua/_const.lua""
 
 Decompiled code won't scroll correctly as the line numbers are different.",
-302535920000264,Defaults to :GetObjectBBox() if it can't find a func.,
+302535920000264,"Defaults to ObjectHierarchyBBox(obj,const.efCollision) if it can't find a func.",
 302535920001514,Toggle visibility of an input box for executing code.,
 302535920001515,Press enter to execute code.,
 302535920001516,o = examined object,
@@ -399,7 +400,6 @@ Warning: Entering the wrong value may crash the game or otherwise cause issues."
 302535920000086,Manually refresh the list.,
 302535920000087,Refresh delay in ms,
 302535920000088,Double right-click to open list of objects.,
-302535920000089,Nothing left,
 302535920000091,Auto-refresh list every second (turn off to edit values).,
 302535920000092,Updates list with any changed values.,
 302535920000095,New Entry,
@@ -449,7 +449,6 @@ I will face my fear. I will permit it to pass over me and through me.
 And when it has gone past I will turn the inner eye to see its path.
 Where the fear has gone there will be nothing. Only I will remain.",
 302535920000108,Select a building with a protect_range (MDSLaser/DefenceTower).,
-302535920000109,Protect,
 302535920000113,%s range is now %s.,
 302535920000114,Set Protection Radius,
 302535920000116,%s: Buildings unlocked.,
@@ -462,7 +461,6 @@ Where the fear has gone there will be nothing. Only I will remain.",
 302535920001250,You need to select a building that uses oxygen.,
 302535920000124,Charge,
 302535920000125,Discharge,
-302535920000127,Rate,
 302535920000128,%s rate is now: %s,
 302535920000130,Dis/Charge Rates,
 302535920000131,Current rate,
@@ -656,7 +654,6 @@ To unlock a single building: See ECM>Buildings>%s.",
 302535920000366,Complete all constructions instantly.,
 302535920000368,Open the mod editor.,
 302535920000233,Cheats hover toggle,
-302535920000234,Cheats menu save position,
 302535920000238,"Are you sure you want to reset all research (includes breakthrough tech)?
 
 Buildings are still unlocked.",
@@ -721,7 +718,6 @@ Skip it?",
 Best hope you picked India as your Mars sponsor...",
 302535920000298,"Max amount in UICity.tech_field list, you could make the amount larger if you want (an update/mod can add more).",
 302535920000299,%s: Research is what I'm doing when I don't know what I'm doing.,
-302535920000300,BreakThroughs From Omega,
 302535920000301,Doubled the base amount.,
 302535920000302,%s: S M R T,
 302535920000303,BreakThroughs Allowed,
@@ -758,7 +754,6 @@ Activated when colonist changes job.",
 I think somebody has been playing too much Fallout...",
 302535920000743,Childkiller,
 302535920000744,%s: Wholesale slaughter,
-302535920000745,Snacks,
 302535920000747,"Convert useless meatbags into productive protein.
 
 Certain colonists may take some time (traveling in shuttles).
@@ -993,8 +988,6 @@ Not permanent.",
 302535920001329,Hide the white ground grids.,
 302535920001310,DTM Slots Display,
 302535920001311,Show DTM slots display,
-302535920001312,FPS Counter Location,
-302535920001313,One of the four corners of your screen.,
 302535920001314,Toggle Render,
 302535920001315,Toggle rendering certain stuff.,
 302535920001316,Toggled: %s = %s,
@@ -1046,7 +1039,7 @@ Use Shift + Arrow keys to change the height/radius.",
 302535920000449,Attach Spots Toggle,
 302535920000450,Toggle showing attachment spots on selected object.,
 302535920000451,Measure Tool,
-302535920000452,Measures stuff (Use Ctrl-Shift-M to remove the lines).,
+302535920000452,Measures stuff (press again to remove the lines).,
 302535920000455,Object Cloner,
 302535920000456,Clones selected/moused over object to current mouse position (should probably use the shortcut key rather than this menu item).,
 302535920000457,Anim State Set,
@@ -1113,11 +1106,9 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000897,Drone prefabs,
 302535920000898,Pack Drones,
 302535920000899,Check this to pack drone(s) into prefabs (number can be higher than attached drones).,
-302535920000900,Build Speed,
 302535920000901,Set Drone Factory Build Speed,
 302535920000904,%s: More where that came from,
 302535920000905,%s: Slight of hand,
-302535920000906,%s: I'm singing in the rain. Just singin' in the rain. What a glorious feeling.,
 302535920000907,"%s: Well, if jacking on'll make strangers think I'm cool, I'll do it!",
 302535920000908,%s: You know what they say about leaky pipes.,
 302535920000909,"If you set this amount larger then a building's ""Storage"" amount then the drones will NOT pick up storage (See: Fixes>%s).",
@@ -1156,8 +1147,6 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920000519,Drone Battery Infinite,
 302535920000521,Drone Build Speed,
 302535920000522,Instant build/repair when resources are ready.,
-302535920000523,Drone Meteor Malfunction,
-302535920000524,Drones will not malfunction when close to a meteor impact site.,
 302535920000526,Faster/Slower Drone Recharge.,
 302535920000527,Drone Repair Supply Leak Speed,
 302535920000528,Faster Drone fix supply leak.,
@@ -1208,7 +1197,6 @@ Blue = pass/no build, Red = no pass/no build.",
 302535920001195,Reset to 500 M,
 302535920001196,"If your funds are a negative value, then you added too much.
 Fix with: %s",
-302535920001198,Resource Filled,
 302535920001269,Amount Per Click,
 302535920001270,Weight Per Item,
 302535920001271,Price Per Item,
@@ -1419,7 +1407,6 @@ Some settings can't be changed in the editor, but you can manually add them in t
 302535920000980,Opens up the list of premade styles so you can start with the settings from one.,
 302535920000981,Choose to this remove Permanent setting.,
 302535920000983,"Custom Lightmodel made with ""Change Light Model Custom"".",
-302535920000984,Lighting,
 302535920000985,Select Lightmodel Preset,
 302535920000986,Change Lightmodel,
 302535920000987,If you used Permanent; you must choose default to remove the setting (or it'll set the lightmodel next time you start the game).,
@@ -1488,7 +1475,6 @@ And yes Medium is using a higher setting than High...",
 302535920001063,"Disable mouse border scrolling, WASD still works fine.",
 302535920001064,Mouse,
 302535920001066,What used to be the default for this ECM setting,
-302535920001067,Zoom,
 302535920001065,Menu Option,
 302535920001206,Change how many Sols between autosaving.,
 302535920000845,Render,
@@ -1577,13 +1563,9 @@ This will always apply if uploading to paradox.",
 302535920001245,Abort without touching anything.,
 302535920000466,"This will disable the cheats menu, cheats panel, and all hotkeys.
 Change DisableECM to false in settings file to re-enable them.",
-302535920001068,%s: Interface in screenshots.,
-302535920001069,Interface,
 302535920001070,Restart to take effect.,
 302535920001072,"Are you sure you want to reset ECM settings?
 Old settings are saved as %s (or not saved if you don't use the HelperMod).",
-302535920001076,Hints Reset!,
-302535920001077,%s: Bye bye hints,
 302535920001078,"Hover mouse over menu item to get description and enabled status
 If there isn't a status then it's likely a list of options to choose from
 
@@ -1617,6 +1599,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920000673,info dialog.,
 302535920000676,Reset ECM Settings,
 302535920000677,Reset all ECM settings to default (restart to enable).,
+302535920000523,How many to multiple the default speed by: <color 0 200 0>%s</color>.,
 302535920000694,Set Opacity,
 302535920000680,Annoying Sounds,
 302535920001126,Double,
@@ -1642,9 +1625,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920001099,Add these items to the unpin list.,
 302535920001100,Remove from list,
 302535920001101,Remove these items from the unpin list.,
-302535920001102,Cleaned all,
 302535920001103,Objects,
-302535920001104,Fixed all,
 302535920001105,"Select/mouse over an object (buildings, vehicles, signs, rocky outcrops).",
 302535920001106,Change main object colours.,
 302535920001107,Change colours of an attached object.,
@@ -1653,9 +1634,6 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920001117,Opacity,
 302535920001118,"You can still select items after making them invisible (0), but it may take some effort :).",
 302535920001122,%s: HAXOR,
-302535920001123,%s: Cleanup cheats infopane.,
-302535920001124,%s: scans at a time.,
-302535920001125,Scanner,
 302535920001127,Triple,
 302535920001128,Quadruple,
 302535920001129,Octuple,
@@ -1664,8 +1642,6 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920001132,Quattuorsexaguple,
 302535920001134,Custom: %s < base number 3 multipled by custom amount.,
 302535920001135,%s: Excusa! Esta too mucho rapido for the eyes to follow? I'll show you in el slow motiono.,
-302535920001136,Speed,
-302535920001137,Set Game Speed,
 302535920001139,You need to select an object.,
 302535920001140,No animation.,
 302535920001141,Default Entity,
@@ -1682,7 +1658,6 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email %
 302535920001153,"Post a request if you want me to add more entities from EntityData (use ex(EntityData) to list).
 
 Not permanent for colonists after they exit buildings (for now).",
-302535920001155,Set Entity Scale For %s,
 302535920001156,Current object,
 302535920001157,If you don't pick a checkbox it will change all of selected type.,
 302535920000678,Change Surface Signs To Materials,
@@ -1712,7 +1687,6 @@ AddMaintenancePnts, MakeSphereTarget, SpawnWorker, SpawnVisitor",
 302535920000702,Game Speed,
 302535920000703,"Change the game speed (only for medium/fast, normal is normal).",
 302535920001460,Add/remove rival colonies.,
-302535920001461,* means it's an active rival you can remove.,
 302535920001462,%s rival colonies.,
 302535920001247,Start Challenge,
 302535920001249,Shows a list of challenges you can start (replaces current).,
@@ -1733,20 +1707,15 @@ Damage? Total, sir.
 It's what we call a global killer.
 The end of mankind. Doesn't matter where it hits. Nothing would survive, not even bacteria.",
 302535920001161,Sponsor for this save is now %s.,
-302535920001162,Sponsor,
-302535920001166,Bonuses,
 302535920001168,Modded ones are mostly ignored for now (just cargo space/research points).,
 302535920001169,Turn Off,
 302535920001170,Turn off selected bonuses (defaults to turning on).,
 302535920001171,Turn All Off,
 302535920001172,Turns off all bonuses.,
 302535920001173,Commander for this save is now %s.,
-302535920001174,Commander,
-302535920001177,Logo,
 302535920001178,Set New Logo,
 302535920001179,%s occurrence is now: %s,
 302535920001180,Disaster Occurrences,
-302535920001181,Rules,
 302535920001182,Set Game Rules,
 302535920001185,Add selected rules,
 302535920001186,Remove selected rules,
