Expanded Cheat Menu: - Code cleanup. - Sped up complete construct cheat when there's a lots of them.
Lib:
- Fixed DeleteObject not deleting everything on funky modded buildings.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -77,6 +77,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000033,Post a request on Nexus or Github or send an email to: %s,
 302535920001092,Pins,
 302535920000004,Dump,
+302535920000109,Invalid Image,
 302535920001543,Set collisions on %s. Collisions disabled: %s,
 302535920001541,Start a Crime Event,
 302535920001542,Renegades not required.,
